--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -1,6 +1,14 @@
+:root {
+    --darkest: #22223B;
+    --dark: #4A4E69;
+    --light: #9A8C98;
+    --lighest: #C9ADA7;
+    --textColor: #F2E9E4;
+}
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #2e2e2e; /* Dark gray background */
+    background-color: var(--darkest); /* Dark gray background */
     margin: 0;
     padding: 0;
 }
