--- a/Stylesheets/header.css
+++ b/Stylesheets/header.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #333;
+    background-color: var(--dark);
     color: white;
     text-align: center;
 }
@@ -18,16 +18,19 @@ header {
     clear: both;
     height: 0;
 }
-.clearfix { display: inline-block; }
+.clearfix {
+    display: inline-block;
+    background-color: var(--dark);
+}
+
 * html .clearfix { height: 1%; }
 .clearfix { display: block; }
 
 /* General header container styling */
 .header-container {
     display: flex;
-    justify-content: space-between; /* Aligns left, center, and right containers */
     align-items: center; /* Vertically center items */
-    background-color: #333;
+    background-color: var(--dark);
     height: 50px;
     box-sizing: border-box;
 
@@ -38,27 +41,26 @@ header {
 /* Left container (logo) */
 .header-container-left {
     float: left;
-    background: Red;
     width: 25%;
 }
 
 /* Center container (title) */
 .header-container-center {
     align-items: center;
-    background: blue;
     width: 50%;
+    justify-content: center;
 }
 
 /* Right container (menu button and dropdown) */
 .header-container-right {
     float: right;
     width: 25%;
+    justify-content: end;
 }
 
 /* Main Menu button */
 .menu-button {
-    background-color: #007BFF;
-    color: white;
+    color: var(--textColor);
     padding: 10px 15px;
     text-decoration: none;
     border-radius: 5px;
@@ -66,7 +68,7 @@ header {
 }
 
 .menu-button:hover {
-    background-color: #0056b3;
+    background-color: var(--darkest);
 }
 
 /* Dropdown styling */
@@ -76,8 +78,8 @@ header {
 }
 
 .dropdown-btn {
-    background-color: #007BFF;
-    color: white;
+    color: var(--textColor);
+    background: var(--dark);
     padding: 10px 15px;
     border: none;
     border-radius: 5px;
@@ -86,27 +88,30 @@ header {
 }
 
 .dropdown-btn:hover {
-    background-color: #0056b3;
+    /*background-color: var(--darkest);*/
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: var(--dark);
+    color: var(--darkest);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    outline: 2px solid var(--light)
 }
 
 .dropdown-content a {
-    color: black;
+    color: var(--textColor);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
 .dropdown-content a:hover {
-    background-color: #f1f1f1;
+    background-color: var(--darkest);
+    /*text-decoration: underline;*/
 }
 
 /* Show dropdown content on hover */
@@ -115,7 +120,17 @@ header {
 }
 
 .logo {
-    width: 250px; /* Adjust size as needed */
+    width: 250px;
     height: 20px;
-    margin-right: 15px; /* Space between logo and title */
+    margin-right: 15px;
+}
+
+.social-media-logo-container {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+
+.social-media-logo{
+    height: 25px;
 }
