--- a/Stylesheets/index/projects.css
+++ b/Stylesheets/index/projects.css
@@ -25,62 +25,65 @@
 
 .project-content {
     flex: 1 1 80%;
+    color: var(--textColor);
 }
 
-h1 {
+.project-content h1 {
     font-size: 2.5em;
-    margin-bottom: 10px;
 }
 
 .project-release-date {
-    font-size: 1.2em;
+    font-size: 1em;
     font-style: italic;
-    margin-bottom: 20px;
+    color: var(--lighest);
 }
 
 .project-description {
-    font-size: 1.1em;
-    margin-bottom: 30px;
+    font-size: 1.5em;
+    padding: 20px;
+}
+
+.project-buttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
 }
 
 .more-info-btn {
-    padding: 10px 20px;
     font-size: 1em;
-    background-color: #d0d4db;
+    background-color: var(--dark);
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: 120px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--textColor);
+    gap: 5px;
 }
 
 .more-info-btn:hover {
-    background-color: #b3b9c1;
+    background-color: var(--light);
+}
+
+.more-info-btn i {
+    font-size: 1.7em;
 }
 
 .screenshots {
-    flex: 1 1 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.small-images {
     display: flex;
     gap: 10px;
-    margin-bottom: 20px;
+    padding: 20px 0px 0px 0px;
 }
 
-.small-images img {
-    width: 100px;
+.screenshots img {
+    width: 25%;
     height: auto;
-    border: 1px solid #ddd;
+    border: 1px solid var(--dark);
     border-radius: 4px;
-    padding: 5px;
-}
-
-.main-image img {
-    width: 100%;
-    max-width: 400px;
-    border-radius: 10px;
+    padding: 2px;
 }
 
 .steam-logo {
