--- a/Stylesheets/footer.css
+++ b/Stylesheets/footer.css
@@ -3,7 +3,7 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
-    position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 100;
 }
