--- a/Stylesheets/index/projects.css
+++ b/Stylesheets/index/projects.css
@@ -13,6 +13,9 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: 30px;
+    margin-bottom: 30px;
+    margin-top: 15px;
+    outline: 2px solid var(--dark);
 }
 
 .project-capsule {
