add Steam and Press Kit links to project previews

--- a/Stylesheets/index/projects.css
+++ b/Stylesheets/index/projects.css
@@ -65,6 +65,7 @@
     justify-content: center;
     color: var(--textColor);
     gap: 5px;
+    text-decoration: none;
 }
 
 .more-info-btn:hover {
