--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -1,4 +1,5 @@
 :root {
+    /* Color Palette https://coolors.co/palette/22223b-4a4e69-9a8c98-c9ada7-f2e9e4 */
     --darkest: #22223B;
     --dark: #4A4E69;
     --light: #9A8C98;
