--- a/Stylesheets/project/project.css
+++ b/Stylesheets/project/project.css
@@ -20,6 +20,7 @@
     align-items: center;
     width: 30%;
     justify-content: center;
+    justify-items: center;
 }
 
 /* Title Logo */
@@ -71,6 +72,17 @@
     float: left;
 }
 
+.character-right {
+    float: right;
+    width: 35%;
+}
+
+.character-right img {
+    height: 400px;
+    width: auto;
+    float: right;
+}
+
 .coming-soon {
     font-size: 1.5em;
     font-family: Courier New, monospace;
@@ -113,29 +125,4 @@
 .carousel-parent {
     justify-content: center;
     display: flex;
-}
-
-.description {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 60px 20px 50px 20px;
-    font-size: 1.5em;
-    color: var(--textColor);
-}
-
-.description p {
-    text-align: center;
-    width: 40%;
-}
-
-.description p:first-child {
-    text-align: center;
-    width: 60%;
-    margin-bottom: 20px;
-}
-
-.description img {
-    max-height: 50px;
-    margin: 50px 0px 5px 0px;
 }
