--- a/Stylesheets/project/sk.css
+++ b/Stylesheets/project/sk.css
@@ -11,3 +11,17 @@
     margin-top: 20px;
 }
 
+.description-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 60px 20px 50px 20px;
+    font-size: 1.5em;
+    color: var(--textColor);
+}
+
+.description-main p {
+    text-align: center;
+    width: 60%;
+    font-size: 1.15em;
+}
